5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1637_1053.log
== TEST (2019-04-06 19:26:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = int(input("Qual o pattrono:"))
if (patrono.lower() == cervo):
	msg = patrono + "nao eh patrono do Harry Potter"
else:
	msg = "cervo eh patrono do Harry Potter"
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono = int(input())
ValueError: invalid literal for int() with base 10: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:27:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == cervo):
	msg = patrono + "nao eh patrono do Harry Potter"
else:
	msg = "cervo eh patrono do Harry Potter"
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono.lower() == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:27:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono == cervo):
	msg = patrono + "nao eh patrono do Harry Potter"
else:
	msg = "cervo eh patrono do Harry Potter"
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:28:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == cervo):
	msg = patrono + "nao eh patrono do Harry Potter"
else:
	msg = "cervo eh patrono do Harry Potter"
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono.lower() == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:28:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == "cervo"):
	msg = patrono + "nao eh patrono do Harry Potter"
else:
	msg = "cervo eh patrono do Harry Potter"
print(msg)	
-- OUTPUT:
cervonao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:29:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == "cervo"):
	msg = patrono +" " + "eh patrono do Harry Potter"
else:
	msg = "nao cervo eh patrono do Harry Potter"
print(msg)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:29:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == "cervo"):
	msg = patrono +" " + "eh patrono do Harry Potter"
else:
	msg = patrono + " " + "nao eh patrono do Harry Potter"
print(msg)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:29:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == "cervo"):
	msg = patrono +" " + "eh patrono do Harry Potter"
else:
	msg = patrono + " " + "nao eh patrono do Harry Potter"
print(msg)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == "cervo"):
	msg = patrono +" " + "eh patrono do Harry Potter"
else:
	msg = patrono + " " + "nao eh patrono do Harry Potter"
print(msg)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 19:29:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o pattrono:")
if (patrono.lower() == "cervo"):
	msg = patrono +" " + "eh patrono do Harry Potter"
else:
	msg = patrono + " " + "nao eh patrono do Harry Potter"
print(msg)	
-- EXECUTION TIME:
0.195551
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
